# sp4-vacancies-search

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: headhunter_api.py  interfaces.py  utils.py  vacancy.py
src/data_handlers/: csv_saver.py  db_manager.py  excel_saver.py  json_saver.py
tests/: conftest.py  test_headhunter_api.py  test_json_saver.py  test_utils.py  test_vacancy.py
